--- a/app/src/main/res/layout/activity_chooser.xml
+++ b/app/src/main/res/layout/activity_chooser.xml
@@ -2,10 +2,10 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
               android:layout_width="match_parent" android:layout_height="match_parent">
-    <LinearLayout android:id="@android:id/empty" android:gravity="center" android:visibility="gone"
+    <LinearLayout android:id="@android:id/empty" android:gravity="center"
                   android:layout_width="match_parent" android:layout_height="match_parent">
         <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" />
     </LinearLayout>
-    <ExpandableListView android:id="@android:id/list" android:drawSelectorOnTop="false" android:fastScrollEnabled="true"
-                        android:layout_width="match_parent" android:layout_height="match_parent" />
+    <android.support.v7.widget.RecyclerView android:id="@android:id/list" android:visibility="gone"
+                                            android:layout_width="match_parent" android:layout_height="match_parent" />
 </LinearLayout>
