--- a/app/src/main/res/values/values.xml
+++ b/app/src/main/res/values/values.xml
@@ -3,7 +3,7 @@
     <color name="material_blue_300">#91a7ff</color>
     <color name="material_blue_500">#5677fc</color>
     <color name="material_blue_700">#455ede</color>
-    <color name="background_darker_light">#ddd</color>
+    <color name="background_darker">#1000</color>
     <style name="Theme.Material.Blue" parent="Theme.AppCompat.Light">
         <item name="colorPrimary">@color/material_blue_500</item>
         <item name="colorPrimaryDark">@color/material_blue_700</item>
