--- a/app/src/main/res/layout/actions_chooser.xml
+++ b/app/src/main/res/layout/actions_chooser.xml
@@ -3,11 +3,11 @@
               android:layout_width="match_parent" android:layout_height="match_parent">
     <include layout="@layout/toolbar" />
     <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
-        <LinearLayout android:id="@android:id/empty" android:gravity="center" android:visibility="gone"
+        <LinearLayout android:id="@android:id/empty" android:gravity="center"
                       android:layout_width="match_parent" android:layout_height="match_parent">
             <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" />
         </LinearLayout>
         <ListView android:id="@android:id/list" android:drawSelectorOnTop="false" android:fastScrollEnabled="true"
-                  android:layout_width="match_parent" android:layout_height="match_parent" />
+                  android:layout_width="match_parent" android:layout_height="match_parent" android:visibility="gone" />
     </FrameLayout>
 </LinearLayout>
