--- a/app/src/main/res/xml/invisible_widget_info.xml
+++ b/app/src/main/res/xml/invisible_widget_info.xml
@@ -2,5 +2,5 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android" android:resizeMode="horizontal|vertical"
                     android:minWidth="1dp" android:minHeight="1dp" android:initialLayout="@layout/invisible_widget"
                     android:configure="tk.mygod.invisibleWidgetPlus.InvisibleWidgetActionsChooser"
-                    android:previewImage="@drawable/invisible" android:widgetCategory="home_screen|keyguard"
+                    android:widgetCategory="home_screen|keyguard"
                     android:initialKeyguardLayout="@layout/invisible_widget" />
