--- a/app/src/main/res/xml/invisible_widget_info.xml
+++ b/app/src/main/res/xml/invisible_widget_info.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android" android:resizeMode="horizontal|vertical"
                     android:minWidth="1dp" android:minHeight="1dp" android:initialLayout="@layout/invisible_widget"
-                    android:configure="tk.mygod.invisibleWidgetPlus.InvisibleWidgetActionsChooser"
+                    android:configure="tk.mygod.invisibleWidgetPlus.ShortcutsChooser"
                     android:widgetCategory="home_screen|keyguard"
                     android:initialKeyguardLayout="@layout/invisible_widget" />
