--- a/app/src/main/res/layout/activities_chooser.xml
+++ b/app/src/main/res/layout/activities_chooser.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
               android:layout_width="match_parent" android:layout_height="match_parent">
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/toolbar_light_dark" />
     <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
         <LinearLayout android:id="@android:id/empty" android:gravity="center"
                       android:layout_width="match_parent" android:layout_height="match_parent">
