--- a/app/src/main/res/layout/invisible_widget.xml
+++ b/app/src/main/res/layout/invisible_widget.xml
@@ -1,2 +1,3 @@
 <Button xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/button"
-        android:layout_width="match_parent" android:layout_height="match_parent" android:background="#00000000" />
+        android:layout_width="match_parent" android:layout_height="match_parent"
+        android:background="@android:color/transparent" />
