--- a/src/main/res/layout/activities_chooser.xml
+++ b/src/main/res/layout/activities_chooser.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
-              android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="?android:attr/windowBackground"
+              android:orientation="vertical"
+>
     <include layout="@layout/toolbar_light_dark" />
     <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
         <LinearLayout android:id="@android:id/empty" android:gravity="center"
